# fastapi-basic

./: README.md  database.db  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 210ee0262c5d_update_type_value_for_created_at.py  71a803fff705_add_category_and_productcategorylink.py  9504b6ca99df_init.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/router/: category.py  product.py
app/schema/: category.py  product.py
app/types/: enums.py
app/utils/: query_params.py
script/: seeder.py
