[project]
name = "fastapi-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.3",
  "fastapi>=0.128.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "ruff>=0.15.0",
  "scalar-fastapi>=1.6.1",
  "sqlmodel>=0.0.32",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
exclude = ["alembic"]
